--- a/lab4_solutions.ipynb
+++ b/lab4_solutions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "ff86b9fd-5683-4d6c-ae45-aaa00fb52e48",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "3ffed90c-235d-4db9-98b1-a55fba6f8d75",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "Train MSE: 14.713970234969663\n",
-      "Validation MSE: 19.708197811201288\n"
+      "Validation MSE: 19.70819781120129\n"
      ]
     }
    ],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "id": "9e3ee7de-805b-4288-b80f-7da9b5f8944d",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "id": "d388cdfc-636b-4ca8-bb70-fc284c153ce7",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "27cfe5d2-f6ba-417a-a7c8-c81f7cc879c0",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
      "output_type": "stream",
      "text": [
       "Best Alpha: 206.913808111479\n",
-      "Lowest Validation MSE: 14.69076392433455\n"
+      "Lowest Validation MSE: 14.690763924334549\n"
      ]
     }
    ],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "d0793ad8-6dd4-4094-a16d-db27b6157e71",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml2025",
+   "display_name": "male2025",
    "language": "python",
    "name": "python3"
   },
@@ -1609,7 +1609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
