--- a/lab7_solutions.ipynb
+++ b/lab7_solutions.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
     "# Plot bootstrap\n",
     "fig, axs = plt.subplots(1, 1, figsize=(12, 8))\n",
     "# Plot data points\n",
-    "axs.scatter(X[:, 1], y, color=\"blue\", alpha=0.5, label=\"Data\")\n",
+    "axs.scatter(X[:, 1], y_train, color=\"blue\", alpha=0.5, label=\"Data\")\n",
     "# Plot regression line\n",
     "axs.plot(x_pred, y_pred_mean, \"r-\", label=\"Fitted line\")\n",
     "# Plot theoretical confidence intervals\n",
