--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -1064,6 +1064,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Orange points = all the ways our data _could_ have looked like."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bonus:\n",
     "Apply this Bayesian Framework for Regression to a real world Dataset we have considered."
    ]
