--- a/lab7.ipynb
+++ b/lab7.ipynb
@@ -524,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml2025",
+   "display_name": "male2025",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
